styles/styles.scss
// Variable overrides

// Bootstrap and its default variables
@import "~bootstrap/scss/bootstrap";

// Custom styles
.ratio-img {
  height: 100%;
  min-width: 230px;
  padding-top: 62%;
  position: relative;
  overflow: hidden;
}

.ratio-img img {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  object-fit: cover;
}

iframe {
  display: block;
  margin: 0 auto;
}

.partner-image {
  max-height: 90px;
}

.partner-image + .partner-image {
  margin-left: 4px;
}

.preview {
  text-align: center;
  position: relative;
}

.preview img {
  max-width: 100%;
  object-fit: cover;
}

.preview p {
  margin: 0;
}

.preview div {
  position: absolute;
  min-height: 130px;
  width: 300px;
  top: calc(50% - 65px);
  left: calc(50% - 150px);
  background: #fff;
  padding: 8px;
  display: grid;
  place-items: center;
  row-gap: 4px;
}

.preview a {
  font-size: 0.75em;
}

.avatar {
  height: 260px;
}

